--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   grid-column: full-start/full-end;
   height: 100vh;
-  background: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)), url("../images/coffee-computer.jpg") no-repeat center center fixed;
+  background: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)), url("http://res.cloudinary.com/jcliff1473/image/upload/c_scale,w_824/v1516764680/portfolio/coffee-computer_ztgwip.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
